--- a/package.json
+++ b/package.json
@@ -9,18 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@fullpage/react-fullpage": "^0.1.45",
+    "@reduxjs/toolkit": "^2.3.0",
+    "framer-motion": "^11.11.17",
+    "image-size": "^1.1.1",
+    "next": "15.0.3",
+    "pure-react-carousel": "^1.32.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.3.0",
+    "react-image-size": "^2.4.0",
+    "react-page-scroller": "^3.0.1",
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "react-text-transition": "^3.1.0",
+    "redux": "^5.0.1",
+    "scrollex": "^2.0.1",
+    "typewriter-effect": "^2.21.0",
+    "xstate": "^5.18.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "postcss": "^8.4.48",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5"
+  },
+  "browser": {
+    "fs": false
   }
 }
