--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules":{
+    "@typescript-eslint/no-unused-vars":"off",
+    "prefer-const":"off",
+    "@typescript-eslint/no-unused-expressions":"off",
+    "react-hooks/rules-of-hooks":"off"
+  }
 }
